--- a/bouncy_balls/bouncy_balls.html
+++ b/bouncy_balls/bouncy_balls.html
@@ -4,51 +4,14 @@
     <meta charset="UTF-8">
     <link rel="icon" href="bouncy_balls.png" type="image/x-icon">
     <title>Bouncy Balls</title>
-    <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-            box-sizing: border-box;
-        }
-
-        #info {
-            pointer-events: none;
-            position: absolute;
-            top: 0px;
-            left: 0px;
-            color: grey;
-            font-family: consolas;
-            line-height: 1;
-        }
-
-        canvas {
-            margin: 0px;
-            display: block;
-            background-color: #fff;
-        }
-
-        .text {
-            font-size: 16px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            padding: 5px;
-        }
-
-        #help {
-            display: none;
-            position: absolute;
-            top: 35px;
-            right: 5px;
-        }
-    </style>
+    <link rel="stylesheet" href="bouncy_balls.css">
 </head>
 <body>
     <a href="/" title="Home" style="position: absolute; top: 5px; right: 5px;">
         <img src="/home.png" alt="Home" style="width: 30px; height: 30px; user-select: none;">
     </a>
     <div style="position: absolute; top: 5px; right: 40px;">
-        <img src="/question.png" alt="Question" style="width: 30px; height: 30px; user-select: none;" onclick="toggleHelp()">
+        <img src="/question.png" alt="Help" style="width: 30px; height: 30px; user-select: none;" onclick="toggleHelp()">
     </div>
     <div class="text" id="help" style="display: none;">
         Left/right click or tap to add a random ball. <br>
