Added title to help

--- a/bouncy_balls/bouncy_balls.html
+++ b/bouncy_balls/bouncy_balls.html
@@ -10,7 +10,7 @@
     <a href="/" title="Home" style="position: absolute; top: 5px; right: 5px;">
         <img src="/home.png" alt="Home" style="width: 30px; height: 30px; user-select: none;">
     </a>
-    <div style="position: absolute; top: 5px; right: 40px;">
+    <div title="Help" style="position: absolute; top: 5px; right: 40px;">
         <img src="/question.png" alt="Help" style="width: 30px; height: 30px; user-select: none;" onclick="toggleHelp()">
     </div>
     <div class="text" id="help" style="display: none;">
