--- a/make24/make24.html
+++ b/make24/make24.html
@@ -16,18 +16,26 @@
     </div>
 
     <div class="container" style="justify-content: center;">
-        <div class="text">Can</div>
+        <div class="text question">Can</div>
         <div id="numbers"></div>
-        <div class="text">make</div>
+        <div class="text question">make</div> 
         <div>
-            <input type="number" class="input" id="result" value=24 style="width: 60px">
+            <input type="number" class="input question-input" id="result" value=24 style="width: 55px;">
         </div>
-        <div class="text">?</div>
+        <div class="text question">?</div>
     </div>
 
     <div class="container" style="justify-content: center;">
-        <button class="button" onclick="randomNumbers()" id="random">Random</button>
+        <div class="text">Number Count</div>
+        <input type="number" class="input" id="numberCount" value=4 min=2 max=6 step=1 style="width: 35px">
         <button class="button" onclick="confirmNumbers()" id="confirm">Calculate</button>
+    </div>
+    <div class="container" style="justify-content: center;">
+        <div class="text">Random Range</div>
+        <input type="number" class="input" id="randomStart" value=1 step=1 style="width: 45px">
+        <input type="number" class="input" id="randomEnd" value=13 step=1 style="width: 45px">
+        <button class="button" onclick="randomNumbers()" id="random">Random</button>
+
     </div>
     <div class="container" style="justify-content: center;">
         <button class="button" onclick="toggleHidden()" id="toggleHidden" style="display: none;">Hide</button>
