Added "-" between the random range

--- a/make24/make24.html
+++ b/make24/make24.html
@@ -33,6 +33,7 @@
     <div class="container" style="justify-content: center;">
         <div class="text">Random Range</div>
         <input type="number" class="input" id="randomStart" value=1 step=1 style="width: 45px">
+        <div class="text" style="margin:0px;">-</div>
         <input type="number" class="input" id="randomEnd" value=13 step=1 style="width: 45px">
         <button class="button" onclick="randomNumbers()" id="random">Random</button>
 
