--- a/19tet/19tet.html
+++ b/19tet/19tet.html
@@ -7,27 +7,31 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="19tet.css">
 <link rel="stylesheet" href="piano.css">
-<script>
-    var _hmt = _hmt || [];
-    (function() {
-    var hm = document.createElement("script");
-    hm.src = "https://hm.baidu.com/hm.js?07a429e5188f6f9094684adbf5b59ff9";
-    var s = document.getElementsByTagName("script")[0]; 
-    s.parentNode.insertBefore(hm, s);
-    })();
-</script>
 </head>
 <body>
 <a href="/" title="Home" style="position: absolute; top: 5px; left: 5px;">
 <img src="/home.png" alt="Home" style="width: 30px; height: 30px;">
 </a>
+<div title="Help" style="position: absolute; top: 5px; left: 40px;">
+    <img src="/question.png" alt="Help" style="width: 30px; height: 30px; user-select: none;" onclick="toggleHelp()">
+</div>
+<div class="text" id="help" style="position: absolute; top: 35px; left: 5px; display: none; background-color: rgba(255, 255, 255, 0.8);">
+    This is an instrument in 19-tone equal temperament. <br>
+    Press the piano keys or the keys on your keyboard to play it. <br>
+    Press "↑" or "↓" to adjust the octave. <br>
+    Press "←" or "→" to adjust the key. <br>
+    Sound Mode Piano is just like a normal piano. <br>
+    Sound Mode Strings lets the sound continuous. <br>
+    Sound Mode Bells lets the sound throughout defaultly. <br>
+    Pedal lets sound throughout in Sound Mode Piano and Strings, stops the sound in Bells. <br>
+</div>
 
 <div class="title">
-19-TET Instrument
+    19-TET Instrument
 </div>
 
 <div style="display: flex;">
-    <div class="container" id="panel" style="flex: 1;">
+    <div class="container" id="panel" style="flex: 0.6;">
 
         <div class="control">
             <label for="reference">Reference Frequency (Hz)</label>
@@ -95,9 +99,7 @@
         </div>
     </div>
 
-    <div class="display" id="noteDisplay" style="flex: 1;">
-        Press some keys to play sound.
-    </div>
+    <div class="display" id="noteDisplay" style="flex: 0.4;"></div>
 
 </div>
 
