--- a/19tet/19tet.html
+++ b/19tet/19tet.html
@@ -15,13 +15,13 @@
 <div title="Help" style="position: absolute; top: 5px; left: 40px;">
     <img src="/question.png" alt="Help" style="width: 30px; height: 30px; user-select: none;" onclick="toggleHelp()">
 </div>
-<div class="text" id="help" style="position: absolute; top: 35px; left: 5px; display: none; background-color: rgba(255, 255, 255, 0.8);">
+<div class="text" id="help">
     This is an instrument in 19-tone equal temperament. <br>
     Press the piano keys or the keys on your keyboard to play it. <br>
     Press "↑" or "↓" to adjust the octave. <br>
     Press "←" or "→" to adjust the key. <br>
     Sound Mode Piano is just like a normal piano. <br>
-    Sound Mode Strings lets the sound continuous. <br>
+    Sound Mode Strings makes the sound continuous. <br>
     Sound Mode Bells lets the sound throughout defaultly. <br>
     Pedal lets sound throughout in Sound Mode Piano and Strings, stops the sound in Bells. <br>
 </div>
