--- a/make24/make24Study.html
+++ b/make24/make24Study.html
@@ -4,49 +4,43 @@
     <link rel="icon" href="make24.png" type="image/x-icon">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Make 24</title>
+	<title>Make 24 Study</title>
 	<link rel="stylesheet" href="make24.css">
 </head>
 <body>
     <a href="/" title="Home" style="position: absolute; top: 5px; left: 5px;">
     <img src="/home.png" alt="Home" style="width: 30px; height: 30px;">
     </a>
-    <a href="make24Study.html" title="Make 24 Study" style="position: absolute; top: 5px; left: 40px;">
-    <img src="make24Study.png" alt="Make 24 Study" style="width: 30px; height: 30px;">
-    </a>
+    <a href="make24.html" title="Make 24" style="position: absolute; top: 5px; left: 40px;">
+        <img src="make24.png" alt="Make 24" style="width: 30px; height: 30px;">
+        </a>
     <div class="title">
-        Make 24
+        Make 24 Study
     </div>
-
-    <div class="container" style="justify-content: center;">
-        <div class="text question">Can</div>
-        <div id="numbers"></div>
-        <div class="text question">make</div> 
-        <div>
-            <input type="number" class="input question-input" id="result" value=24 style="width: 55px;">
-        </div>
-        <div class="text question">?</div>
-    </div>
-
     <div class="container" style="justify-content: center;">
         <div class="text">Number Count</div>
         <input type="number" class="input" id="numberCount" value=4 min=2 max=6 step=1 style="width: 35px">
-        <button class="button" onclick="confirmNumbers()" id="confirm">Calculate</button>
     </div>
     <div class="container" style="justify-content: center;">
         <div class="text">Random Range</div>
         <input type="number" class="input" id="randomStart" value=1 step=1 style="width: 45px">
         <div class="text" style="margin:0px;">-</div>
         <input type="number" class="input" id="randomEnd" value=13 step=1 style="width: 45px">
-        <button class="button" onclick="randomNumbers()" id="random">Random</button>
     </div>
     <div class="container" style="justify-content: center;">
-        <button class="button" onclick="toggleHidden()" id="toggleHidden" style="display: none;">Hide</button>
+        <div class="text">Target Range</div>
+        <input type="number" class="input" id="targetStart" value=0 step=1 style="width: 60px">
+        <div class="text" style="margin:0px;">-</div>
+        <input type="number" class="input" id="targetEnd" value=100 step=1 style="width: 60px">
+    </div>
+
+    <div class="container" style="justify-content: center;">
+        <button class="button" onclick="main()" id="confirm">Start</button>
     </div>
     <div class="container" style="justify-content: center;">
-        <div class="text" id="output" style="text-align: center;"></div>
+        <div class="text" id="output" style="text-align: center; font-family: Consolas;"></div>
     </div>
 
     <script src="/utilities.js"></script>
-    <script src="make24.js"></script>
+    <script src="make24Study.js"></script>
 </html>
