Added image hiding timer and some small changes

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             19-TET Instrument / 十九平均律乐器
         </a>
     </div>
-    <div class="link" id="bouncy_balls">
+    <div class="link" id="bouncy-balls">
         <a href="/bouncy_balls/bouncy_balls.html">
             Bouncy Balls / 弹球
         </a>
@@ -78,9 +78,14 @@
             Make 24 / 24点
         </a>
     </div>
-    <div class="link" id="bpm_test">
+    <div class="link" id="bpm-test">
         <a href="/bpm_test/bpm_test.html">
             BPM Test / BPM 测试
+        </a>
+    </div>
+    <div class="link" id="audio-visualizer">
+        <a href="/audio_visualizer/audio_visualizer.html">
+            Audio Visualizer / 音频可视化
         </a>
     </div>
 </body>
