Fixed bug that sometimes failed to initialize audio context

--- a/audio_visualizer/audio_visualizer.html
+++ b/audio_visualizer/audio_visualizer.html
@@ -13,7 +13,7 @@
 <img src="/home.png" alt="Home" style="width: 30px; height: 30px;">
 </a>
 
-<canvas id="audio-visualizer"></canvas>
+<canvas id="canvas"></canvas>
 
 <script src="audio_visualizer.js"></script>
 
