Added system audio option

--- a/audio_visualizer/audio_visualizer.html
+++ b/audio_visualizer/audio_visualizer.html
@@ -9,9 +9,13 @@
 </head>
 <body>
 
-<a href="/" title="Home" style="position: absolute; top: 5px; left: 5px;">
+<a href="/" title="Home" style="position: absolute; top: 5px; left: 5px; z-index: 1;">
 <img src="/home.png" alt="Home" style="width: 30px; height: 30px;">
 </a>
+
+<button id="audioToggleBtn" class="audio-toggle">
+    <img src="microphone.png" alt="Audio Source" class="audio-icon">
+</button>
 
 <canvas id="canvas"></canvas>
 
