--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="title-cn">
         欢迎来到王新昊的网站！
     </div>
-    <img src="selfie.png" alt="Jerry.X.Wang" style="position: absolute; height: 30%; right: 5px; bottom: 5px">
+    <!-- <img src="selfie.png" alt="Jerry.X.Wang" style="position: absolute; height: 30%; right: 5px; bottom: 5px"> -->
     <div class="link" id="19tet">
         <a href="/19tet/19tet.html">
             19-TET Instrument / 十九平均律乐器
