--- a/make24/make24.html
+++ b/make24/make24.html
@@ -30,9 +30,9 @@
 
     <div class="container" style="justify-content: center;">
         <div class="text">Number Count</div>
-        <input type="number" class="input" id="numberCount" value=4 min=2 max=6 step=1 style="width: 35px">
-        <button class="button" onclick="confirmNumbers()" id="confirm">Calculate</button>
+        <input type="number" class="input" id="numberCount" value=4 min=2 max=6 step=1 style="width: 40px">
     </div>
+
     <div class="container" style="justify-content: center;">
         <div class="text">Random Range</div>
         <input type="number" class="input" id="randomStart" value=1 step=1 style="width: 45px">
@@ -40,6 +40,13 @@
         <input type="number" class="input" id="randomEnd" value=13 step=1 style="width: 45px">
         <button class="button" onclick="randomNumbers()" id="random">Random</button>
     </div>
+    
+    <div class="container" style="justify-content: center;">
+        <div class="text" style="margin:0px;">Consider Commutative Law</div>
+        <input type="checkbox" class="checkbox" id="commutative" checked>
+        <button class="button" onclick="confirmNumbers()" id="confirm">Calculate</button>
+    </div>
+    
     <div class="container" style="justify-content: center;">
         <button class="button" onclick="toggleHidden()" id="toggleHidden" style="display: none;">Hide</button>
     </div>
