--- a/index.html
+++ b/index.html
@@ -88,5 +88,10 @@
             Audio Visualizer / 音频可视化
         </a>
     </div>
+    <div class="link" id="audio-visualizer">
+        <a href="/metronome/metronome.html">
+            Metronome / 节拍器
+        </a>
+    </div>
 </body>
 </html>
