--- a/make24/make24Study.html
+++ b/make24/make24Study.html
@@ -22,16 +22,16 @@
         <input type="number" class="input" id="numberCount" value=4 min=2 max=6 step=1 style="width: 35px">
     </div>
     <div class="container" style="justify-content: center;">
-        <div class="text">Random Range</div>
-        <input type="number" class="input" id="randomStart" value=1 step=1 style="width: 45px">
+        <div class="text">Number Range</div>
+        <input type="number" class="input" id="numberStart" value=1 step=1 style="width: 45px">
         <div class="text" style="margin:0px;">-</div>
-        <input type="number" class="input" id="randomEnd" value=13 step=1 style="width: 45px">
+        <input type="number" class="input" id="numberEnd" value=13 step=1 style="width: 45px">
     </div>
     <div class="container" style="justify-content: center;">
-        <div class="text">Target Range</div>
-        <input type="number" class="input" id="targetStart" value=0 step=1 style="width: 60px">
+        <div class="text">Result Range</div>
+        <input type="number" class="input" id="resultStart" value=0 step=1 style="width: 60px">
         <div class="text" style="margin:0px;">-</div>
-        <input type="number" class="input" id="targetEnd" value=100 step=1 style="width: 60px">
+        <input type="number" class="input" id="resultEnd" value=100 step=1 style="width: 60px">
     </div>
 
     <div class="container" style="justify-content: center;">
