Added resetPhase button

--- a/just_intonation/just_intonation.html
+++ b/just_intonation/just_intonation.html
@@ -21,6 +21,10 @@
         <canvas id="lissajousCanvas" width="300" height="300"></canvas>
     </div>
 
+    <div class="container" id="resetPhase">
+        <button class="button" style="width:auto" onclick="resetPhase()">Reset Phase</button>
+    </div>
+
     <div id="dimensionControls">
         <div class="control">
             <label for="dimensionInput">Dimensions:</label>
