--- a/just_intonation/just_intonation.html
+++ b/just_intonation/just_intonation.html
@@ -28,12 +28,12 @@
 
             <div class="control">
                 <label class="panel" for="reference">Reference Frequency</label>
-                <input type="number" id="reference" value="440" min="1" pattern="[0-9]*" style="width: 120px;">
+                <input type="number" id="reference" value="440" min="1" pattern="[0-9]*">
             </div>
 
             <div class="control">
                 <label class="panel" for="octave">Octave</label>
-                <input type="number" id="octave" value="4" step="1" pattern="[0-9]*" style="width: 120px;">
+                <input type="number" id="octave" value="4" step="1" pattern="[0-9]*">
             </div>
 
             <div class="control">
