Renamed project just intonation to just tuner

--- a/just_tuner/just_tuner.html
+++ b/just_tuner/just_tuner.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" href="just_intonation.png" type="image/x-icon">
-    <title>Just Intonation</title>
+    <link rel="icon" href="just_tuner.png" type="image/x-icon">
+    <title>Auto Just Tuner</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="just_intonation.css">
+    <link rel="stylesheet" href="just_tuner.css">
     <link rel="stylesheet" href="piano.css">
     <!-- Add any additional CSS links here if needed -->
 </head>
@@ -15,7 +15,7 @@
     </a>
 
     <div class="title">
-        Just Intonation
+        Auto Just Tuner
     </div>
 
 
@@ -103,9 +103,8 @@
         </div>
     </div> -->
 
-
     <script src="/utilities.js"></script>
-    <script src="just_intonation.js"></script>
+    <script src="just_tuner.js"></script>
     <script src="piano.js"></script>
     <!-- Add any additional scripts here if needed -->
 </body>
