--- a/just_tuner/just_tuner.html
+++ b/just_tuner/just_tuner.html
@@ -6,7 +6,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="just_tuner.css">
-    <link rel="stylesheet" href="piano.css">
     <!-- Add any additional CSS links here if needed -->
 </head>
 <body>
@@ -30,7 +29,7 @@
                 <label class="panel" for="temperament">Temperament</label>
                 <select id="temperament">
                     <option value="autoJust">Auto Just Intonation</option>
-                    <option value="12tet">12-TET</option>
+                    <option value="12tet" selected>12-TET</option>
                 </select>
             </div>
 
@@ -113,7 +112,6 @@
 
     <script src="/utilities.js"></script>
     <script src="just_tuner.js"></script>
-    <script src="piano.js"></script>
-    <!-- Add any additional scripts here if needed -->
+    <script src="lissajous.js"></script>
 </body>
 </html>
