Added phase difference configuration

--- a/just_tuner/just_tuner.html
+++ b/just_tuner/just_tuner.html
@@ -84,6 +84,11 @@
                     <option value="bells">Bells</option>
                 </select>
             </div>
+
+            <div class="control">
+                <label class="panel" for="Phase Difference">Phase Difference</label>
+                <input type="checkbox" class="checkbox" id="phaseDiff" checked>
+            </div>
         </div>
 
         <div class="container" style="display: flex; justify-self: center; flex: 0.4">
