--- a/19tet/19tet.html
+++ b/19tet/19tet.html
@@ -34,10 +34,10 @@
     <div class="container" id="panel" style="flex: 0.6;">
 
         <div class="control">
-            <label for="reference">Reference Frequency</label>
-            <input type="number" id="reference" value="440" min="1" pattern="[0-9]*">
-            <button id="refDecrease">-</button>
-            <button id="refIncrease">+</button>
+            <label for="baseFreq">Reference Frequency</label>
+            <input type="number" id="baseFreq" value="440" min="1" pattern="[0-9]*">
+            <button id="freqDecrease">-</button>
+            <button id="freqIncrease">+</button>
         </div>
 
         <div class="control">
