--- a/just_tuner/just_tuner.html
+++ b/just_tuner/just_tuner.html
@@ -23,7 +23,7 @@
     </div> -->
 
     <div style="display: flex;">
-        <div class="container" id="panel" style="flex: 0.6">
+        <div class="container" id="panel" style="flex: 0.5">
 
             <div class="control">
                 <label class="panel" for="temperament">Temperament</label>
@@ -34,8 +34,8 @@
             </div>
 
             <div class="control">
-                <label class="panel" for="reference">Reference Frequency</label>
-                <input type="number" id="reference" value="440" min="1" pattern="[0-9]*">
+                <label class="panel" for="baseFreq">Base Frequency</label>
+                <input type="number" id="baseFreq" value="440" min="1" pattern="[0-9]*">
             </div>
 
             <div class="control">
@@ -91,8 +91,8 @@
             </div>
         </div>
 
-        <div class="container" style="display: flex; justify-self: center; flex: 0.4">
-            <canvas id="canvas" width="300" height="300"></canvas>
+        <div class="container" style="display: flex; justify-content: center; flex: 0.5">
+            <canvas id="canvas" width="auto" height="300"></canvas>
         </div>
     </div>
 
