--- a/19tet/19tet.html
+++ b/19tet/19tet.html
@@ -48,8 +48,8 @@
         </div>
 
         <div class="control">
-            <label for="key">Key</label>
-            <select id="key">
+            <label for="keyOffset">Key Offset</label>
+            <select id="keyOffset">
                 <option value=0>C</option>
                 <option value=1>C♯</option>
                 <option value=2>D♭</option>
