Renamed keyInMusic to keyOffset

--- a/just_tuner/just_tuner.html
+++ b/just_tuner/just_tuner.html
@@ -44,8 +44,8 @@
             </div>
 
             <div class="control">
-                <label class="panel" for="key">Key</label>
-                <select id="key">
+                <label class="panel" for="keyOffset">Key Offset</label>
+                <select id="keyOffset">
                     <option value=0>C</option>
                     <option value=1>C♯(D♭)</option>
                     <option value=2>D</option>
