Added index of just tuner

--- a/index.html
+++ b/index.html
@@ -88,9 +88,14 @@
             Audio Visualizer / 音频可视化
         </a>
     </div>
-    <div class="link" id="audio-visualizer">
+    <div class="link" id="metronome">
         <a href="/metronome/metronome.html">
             Metronome / 节拍器
+        </a>
+    </div>
+    <div class="link" id="just-tuner">
+        <a href="/just_tuner/just_tuner.html">
+            Auto Just Tuner / 自动纯律调律器
         </a>
     </div>
 </body>
