Added 12-TET + Just intonation

--- a/just_tuner/just_tuner.html
+++ b/just_tuner/just_tuner.html
@@ -29,7 +29,8 @@
                 <label class="panel" for="temperament">Temperament</label>
                 <select id="temperament">
                     <option value="autoJust">Auto Just Intonation</option>
-                    <option value="just" selected>Just Intonation</option>
+                    <option value="12tetPlusJust" selected>12-TET + Just Intonation</option>
+                    <option value="just">Just Intonation</option>
                     <option value="12tet">12-TET</option>
                 </select>
             </div>
