Added auto just tuning (finally)

--- a/just_tuner/just_tuner.html
+++ b/just_tuner/just_tuner.html
@@ -28,8 +28,8 @@
             <div class="control">
                 <label class="panel" for="temperament">Temperament</label>
                 <select id="temperament">
-                    <option value="autoJust">Auto Just Intonation</option>
-                    <option value="12tetPlusJust" selected>12-TET + Just Intonation</option>
+                    <option value="autoJust" selected>Auto Just Intonation</option>
+                    <option value="12tetPlusJust">12-TET + Just Intonation</option>
                     <option value="just">Just Intonation</option>
                     <option value="12tet">12-TET</option>
                 </select>
