Removed transpose when playingNoteCount == 1

--- a/just_tuner/just_tuner.html
+++ b/just_tuner/just_tuner.html
@@ -99,8 +99,8 @@
             <div class="control">
                 <label class="panel" for="soundMode">Sound Mode</label>
                 <select id="soundMode">
-                    <option value="piano">Piano</option>
-                    <option value="strings" selected>Strings</option>
+                    <option value="piano" selected>Piano</option>
+                    <option value="strings">Strings</option>
                     <option value="bells">Bells</option>
                 </select>
             </div>
